Removed no longer needed memory limit detection